--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
   },
   "homepage": "https://github.com/scommisso/node-ns15-sprockets",
   "dependencies": {
-    "ns15-common-data": "^0.0.5"
+    "ns15-common-data": "0.0.3"
   },
   "devDependencies": {
     "chai": "~1.9.1",
